--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,130 @@
-.main {
-  .container {
-    height: 100vh;
-    width: 1440px;
-    margin: 0 auto;
-    display: flex;
-    visibility: hidden;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,600&display=swap");
+
+html {
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
   }
 }
 
-.img-container {
-  width: 1440px;
-  height: 960px;
-  position: relative;
+.hero {
+  visibility: hidden;
+  height: 100vh;
   overflow: hidden;
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    background: pink;
-  }
-
-  img {
+  .container {
     width: 1440px;
-    position: absolute;
+    min-width: 1440px;
+    margin: 0 auto;
+
+    .hero-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .hero-content {
+        width: 50%;
+        .hero-content-inner {
+          width: 480px;
+          margin: 0 auto;
+          color: #323232;
+
+          h1 {
+            font-weight: 500;
+            font-size: 32px;
+            margin-bottom: 24px;
+
+            .hero-content-line {
+              margin: 0;
+              height: 44px;
+              overflow: hidden;
+            }
+          }
+          p {
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: 300;
+            padding-right: 48px;
+            margin-bottom: 56px;
+          }
+
+          .btn-row {
+            position: relative;
+            &::before {
+              position: absolute;
+              content: "";
+              width: 56px;
+              height: 1px;
+              background: #dfdfdf;
+              top: 50%;
+              left: -68px;
+            }
+            button {
+              background: none;
+              border: none;
+              font-size: 12px;
+              padding: 0;
+              cursor: pointer;
+              text-transform: uppercase;
+              font-weight: 700;
+              letter-spacing: 0.7px;
+              display: flex;
+              align-items: center;
+              position: relative;
+
+              &:focus {
+                outline: none;
+              }
+
+              .arrow-icon {
+                position: absolute;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #007fff;
+                height: 42px;
+                width: 42px;
+                border-radius: 100px;
+                left: 80px;
+              }
+            }
+          }
+        }
+      }
+
+      .hero-images {
+        width: 50%;
+        height: 100vh;
+        position: relative;
+        .hero-images-inner {
+          .hero-image {
+            position: absolute;
+            overflow: hidden;
+            &.girl {
+              top: 0;
+              right: 0;
+              width: 40%;
+              height: 50%;
+            }
+
+            &.boy {
+              left: 0;
+              bottom: 24px;
+              width: 52%;
+              height: 65%;
+            }
+
+            img {
+              position: absolute;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
   }
 }
